# react-websocket-chat-rust

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
API/: Cargo.toml  Shuttle.toml
API/src/: lib.rs  main.rs
API/static/: index.html
API/static/assets/: index-692f391e.js  index-70008279.css  index-726b6ed3.js  index-8cf6afb9.css  index-fa9e7bbd.js
src/: App.tsx  index.css  main.tsx
src/components/: NamePrompt.tsx
src/types/: environment.d.ts
websocket-chat-react-rust/: Cargo.toml
websocket-chat-react-rust/src/: lib.rs
