[package]
name = "websocket-chat-react-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = { version = "0.6.4", features = ["ws"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-secrets = "0.9.0"
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
shuttle-static-folder = "0.9.0"
sync_wrapper = "0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "auth"]}

[patch.crates-io.mime_guess]
git="https://github.com/NathanSWard/mime_guess.git"
branch="platform-path-separators"
